--- a/demo/themes/dark/index.html
+++ b/demo/themes/dark/index.html
@@ -5,10 +5,10 @@
 <title>Map Control Themes</title>
 <script src='http://code.jquery.com/jquery-1.7.2.min.js'></script>
 <script src='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.js'></script>
-<link rel='stylesheet' href='../../themes/dark/controls.css' />
-<link rel='stylesheet' href='../../themes/dark/share.css' />
-<script src='../demo.js'></script>
-<script src='../share.js'></script>
+<link rel='stylesheet' href='controls.css' />
+<link rel='stylesheet' href='share.css' />
+<script src='../../demo.js'></script>
+<script src='../../share.js'></script>
 <style>
   body {
     font:500 13px/20px 'Helvetica Neue', Helvetica, Arial, sans-serif;
