--- a/demo/index.html
+++ b/demo/index.html
@@ -4,14 +4,48 @@
 <meta charset=utf-8 />
 <title>Map Control Themes</title>
 <link rel='stylesheet' href='demo.css' />
-<script src='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.js'></script>
 </head>
 <body>
-  <div class='theme light'>
-    <div id='map-light'></div>
-  </div>
-  <div class='theme dark'>
-    <div id='map-dark'></div>
+
+  <div class='limiter'>
+    <div class='header'>
+      <h1>MapBox Controls</h1>
+      <p>A collection of minimal UI styles for MapBox Maps <a href='//github.com/tristen/map-controls/'>Source on Github.</a></p>
+    </div>
+
+    <div class='theme'>
+      <div class='heading clearfix'>
+        <div class='fr'>
+          <a href='themes/light/controls.css' class='button'>Download control.css</a>
+          <a href='themes/light/share.css' class='button'>Download share.css</a>
+        </div>
+        <h3>Light Theme (Default)</h3>
+      </div>
+      <iframe src='themes/light/index.html' frameborder='0'></iframe>
+    </div>
+
+    <div class='theme'>
+      <div class='heading clearfix'>
+        <div class='fr'>
+          <a href='themes/dark/controls.css' class='button'>Download control.css</a>
+          <a href='themes/dark/share.css' class='button'>Download share.css</a>
+        </div>
+        <h3>Dark Theme</h3>
+      </div>
+      <iframe src='themes/dark/index.html' frameborder='0'></iframe>
+    </div>
+
+    <div class='theme'>
+      <div class='heading clearfix'>
+        <div class='fr'>
+          <a href='themes/melon/controls.css' class='button'>Download control.css</a>
+          <a href='themes/melon/share.css' class='button'>Download share.css</a>
+        </div>
+        <h3>Melon Theme</h3>
+      </div>
+      <iframe src='themes/melon/index.html' frameborder='0'></iframe>
+    </div>
+
   </div>
 </body>
 </html>
