Some changes to the demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,39 +9,32 @@
 
   <div class='limiter'>
     <div class='header'>
-      <h1>MapBox Controls</h1>
-      <p>A collection of minimal UI styles for MapBox Maps <a href='//github.com/tristen/map-controls/'>Source on Github.</a></p>
+      <h1>UI themes for mapbox.js. <a href='//github.com/tristen/map-controls/'>Source on Github.</a></h1>
     </div>
 
     <div class='theme'>
       <div class='heading clearfix'>
-        <div class='fr'>
-          <a href='themes/light/controls.css' class='button'>Download control.css</a>
-          <a href='themes/light/share.css' class='button'>Download share.css</a>
-        </div>
         <h3>Light Theme (Default)</h3>
+        <a href='themes/light/controls.css' class='button'>Download control.css</a>
+        <a href='themes/light/share.css' class='button'>Download share.css</a>
       </div>
       <iframe src='themes/light/index.html' frameborder='0'></iframe>
     </div>
 
     <div class='theme'>
       <div class='heading clearfix'>
-        <div class='fr'>
-          <a href='themes/dark/controls.css' class='button'>Download control.css</a>
-          <a href='themes/dark/share.css' class='button'>Download share.css</a>
-        </div>
         <h3>Dark Theme</h3>
+        <a href='themes/dark/controls.css' class='button'>Download control.css</a>
+        <a href='themes/dark/share.css' class='button'>Download share.css</a>
       </div>
       <iframe src='themes/dark/index.html' frameborder='0'></iframe>
     </div>
 
     <div class='theme'>
       <div class='heading clearfix'>
-        <div class='fr'>
-          <a href='themes/melon/controls.css' class='button'>Download control.css</a>
-          <a href='themes/melon/share.css' class='button'>Download share.css</a>
-        </div>
         <h3>Melon Theme</h3>
+        <a href='themes/melon/controls.css' class='button'>Download control.css</a>
+        <a href='themes/melon/share.css' class='button'>Download share.css</a>
       </div>
       <iframe src='themes/melon/index.html' frameborder='0'></iframe>
     </div>
