--- a/demo/index.html
+++ b/demo/index.html
@@ -14,7 +14,7 @@
 
     <div class='theme'>
       <div class='heading clearfix'>
-        <h3>Light Theme (Default)</h3>
+        <h3>Light (Default)</h3>
         <a href='themes/light/controls.css' class='button'>Download control.css</a>
         <a href='themes/light/share.css' class='button'>Download share.css</a>
       </div>
@@ -23,7 +23,7 @@
 
     <div class='theme'>
       <div class='heading clearfix'>
-        <h3>Dark Theme</h3>
+        <h3>Dark</h3>
         <a href='themes/dark/controls.css' class='button'>Download control.css</a>
         <a href='themes/dark/share.css' class='button'>Download share.css</a>
       </div>
@@ -32,7 +32,7 @@
 
     <div class='theme'>
       <div class='heading clearfix'>
-        <h3>Melon Theme</h3>
+        <h3>Melon</h3>
         <a href='themes/melon/controls.css' class='button'>Download control.css</a>
         <a href='themes/melon/share.css' class='button'>Download share.css</a>
       </div>
